<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".InputViewActivity"
              android:gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/myactionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp">

        <TextView
                android:text="Vocabulary-Input"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Spinner
            android:id="@+id/spinner1_input"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />


        <EditText
            android:id="@+id/txt_lang1_input"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your word!"
            android:inputType="textPersonName" />

        <!-- Include other widget or layout tags here. These are considered
                "child views" or "children" of the linear layout -->

    </LinearLayout>



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Spinner
            android:id="@+id/spinner2_input"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/txt_lang2_input"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your word!"
            android:inputType="textPersonName" />

        <!-- Include other widget or layout tags here. These are considered
                "child views" or "children" of the linear layout -->

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="331dp"
        android:layout_height="73dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:text="Rate the Difficult: "
            android:textSize="15sp" />


        <RatingBar
            android:id="@+id/ratingBar_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:isIndicator="false"
            android:numStars="4"
            android:stepSize="1" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:text="Enter a Tag:" />

        <EditText
            android:id="@+id/txt_tag_input"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter your tag here!"
            android:inputType="textPersonName" />


    </LinearLayout>




    <Button
        android:id="@+id/button_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insert your words!"
        android:background="@drawable/input_btn_design"
        tools:layout_width="120dp"
        tools:layout_gravity="center_horizontal"/>



</LinearLayout>