<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/myactionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp">

        <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Rating View"
                android:layout_gravity="center"
                android:focusedByDefault="false"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_lang"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Choose Language:"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spinner_langt"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/tv_sort"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="Sort:"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btn_ascending"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:text="ascending" />

            <RadioButton
                android:id="@+id/btn_descending"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="descending" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Rate:"
            android:textSize="20dp" />


        <RatingBar
            android:id="@+id/ratingBar_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style = "?android:attr/ratingBarStyleIndicator"
            android:isIndicator="false"
            android:numStars="4"
            android:stepSize="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_clear"
            android:text="clear"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sort/Filter"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ListView
            android:id="@+id/list_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

        </ListView>


    </LinearLayout>


</LinearLayout>



