<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RatingBar
        android:id="@+id/ratingBar_popup"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style = "?android:attr/ratingBarStyleIndicator"
        android:isIndicator="false"
        android:numStars="4"
        android:stepSize="1"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_change_difficulty"
        style = "?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Change difficulty"/>

    <Button
        android:id="@+id/btn_delete_entry"
        style = "?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Delete"/>


</LinearLayout>



